{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 13,
  "lineage": "6e0263d9-1924-7401-73cb-307df891b6c9",
  "resources": [
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Dev_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:internet-gateway/igw-05d0422ed5ce5f58d",
            "id": "igw-05d0422ed5ce5f58d",
            "owner_id": "068011096794",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development IGW"
            },
            "tags_all": {
              "Name": "Development IGW"
            },
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:route-table/rtb-03f206b297011deac",
            "id": "rtb-03f206b297011deac",
            "owner_id": "068011096794",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "Development Private RT"
            },
            "tags_all": {
              "Name": "Development Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "rtb-03f206b297011deac",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:route-table/rtb-0f80417e80ebf3774",
            "id": "rtb-0f80417e80ebf3774",
            "owner_id": "068011096794",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d0422ed5ce5f58d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development Public RT"
            },
            "tags_all": {
              "Name": "Development Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "rtb-0f80417e80ebf3774",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_internet_gateway.Dev_IGW",
            "module.Dev_VPC.aws_vpc.Dev_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev_Private_Sub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f93473deb38876d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03f206b297011deac",
            "subnet_id": "subnet-0c49ed747cba3ec34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Dev_VPC.aws_route_table.Private_RT",
            "module.Dev_VPC.aws_subnet.Private_Subnet",
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08403dca5e8c48382",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03f206b297011deac",
            "subnet_id": "subnet-0512c11d7e7cbfc3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Dev_VPC.aws_route_table.Private_RT",
            "module.Dev_VPC.aws_subnet.Private_Subnet",
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev_Public_Sub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07666838a797f2926",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f80417e80ebf3774",
            "subnet_id": "subnet-0d49f9fe64d0009d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Dev_VPC.aws_internet_gateway.Dev_IGW",
            "module.Dev_VPC.aws_route_table.Public_RT",
            "module.Dev_VPC.aws_subnet.Public_Subnet",
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa66142bd0c94d8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f80417e80ebf3774",
            "subnet_id": "subnet-024be59bf541d72d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Dev_VPC.aws_internet_gateway.Dev_IGW",
            "module.Dev_VPC.aws_route_table.Public_RT",
            "module.Dev_VPC.aws_subnet.Public_Subnet",
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:subnet/subnet-0c49ed747cba3ec34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c49ed747cba3ec34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068011096794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development Private VPC"
            },
            "tags_all": {
              "Name": "Development Private VPC"
            },
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "subnet-0c49ed747cba3ec34",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:subnet/subnet-0512c11d7e7cbfc3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0512c11d7e7cbfc3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068011096794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development Private VPC"
            },
            "tags_all": {
              "Name": "Development Private VPC"
            },
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "subnet-0512c11d7e7cbfc3e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:subnet/subnet-0d49f9fe64d0009d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49f9fe64d0009d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068011096794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development Public VPC"
            },
            "tags_all": {
              "Name": "Development Public VPC"
            },
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "subnet-0d49f9fe64d0009d7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:subnet/subnet-024be59bf541d72d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024be59bf541d72d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068011096794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development Public VPC"
            },
            "tags_all": {
              "Name": "Development Public VPC"
            },
            "vpc_id": "vpc-0453dada5ae801737"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "subnet-024be59bf541d72d5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.Dev_VPC.aws_vpc.Dev_VPC",
            "module.Dev_VPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Dev_VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Dev_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068011096794:vpc/vpc-0453dada5ae801737",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a986dee80f6b75f9",
            "default_route_table_id": "rtb-07ba0b6edbf287059",
            "default_security_group_id": "sg-02079d8ffe30390e1",
            "dhcp_options_id": "dopt-04627992890e6559d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0453dada5ae801737",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ba0b6edbf287059",
            "owner_id": "068011096794",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Development VPC"
            },
            "tags_all": {
              "Name": "Development VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068011096794",
            "id": "vpc-0453dada5ae801737",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}